[package]
name = "hopfield"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Dense associative memory and modern Hopfield networks"
repository = "https://github.com/arclabs561/hopfield"
keywords = ["hopfield", "associative-memory", "attention", "energy-based", "pattern-retrieval"]
categories = ["algorithms", "science"]

[dependencies]
# Optional: route the squared-L2 hot loops through innr SIMD f64 kernels.
# Off by default, so the crate stays zero-dependency unless requested.
innr = { version = "0.6", optional = true }

[features]
default = []
simd = ["dep:innr"]

[workspace]
