[package]
name = "hopfield"
version = "0.2.2"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Associative memory algorithms"
repository = "https://github.com/arclabs561/hopfield"
keywords = ["hopfield", "associative-memory", "attention", "energy-based", "pattern-retrieval"]
categories = ["algorithms", "science"]

[dependencies]
# Optional: consume fynch's Fenchel-Young regularizers as Hopfield separation maps.
fynch = { version = "0.2.1", optional = true }

# Optional: route the squared-L2 hot loops through innr SIMD f64 kernels.
# Off by default, so the crate stays zero-dependency unless requested.
innr = { version = "0.6", optional = true }

[features]
default = []
fynch = ["dep:fynch"]
simd = ["dep:innr"]

[[example]]
name = "entmax_retrieval"
path = "examples/entmax_retrieval.rs"
required-features = ["fynch"]

[[example]]
name = "sparsemap_structured_retrieval"
path = "examples/sparsemap_structured_retrieval.rs"
required-features = ["fynch"]

[workspace]
